data/derived/sp14/progs/unify/prog1841.ml.out
Characters 96-97:
  f b in ( bb, bb = f b ) in wwhile( f', b) , b );;
                                              ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
